# stm32-data-reader

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  COPYING  Dockerfile  README.md  build.sh  deploy.sh  docker-compose.yml  install.py  install.sh
.devcontainer/: Dockerfile
.github/workflows/: build-release.yml  reboot-runner.yml
firmware/: .gitignore  CMakeLists.txt  README.md  deploy.sh  docker-compose.yml
firmware/CMake/: GNU-ARM-Toolchain.cmake
firmware/Firmware/: CMakeLists.txt
firmware/Firmware/include/: main.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h
firmware/Firmware/include/Actors/: motor.h  pid.h  servo.h
firmware/Firmware/include/Communication/: communication_with_pi.h  spi.h  usart.h
firmware/Firmware/include/Data_structures/: PID.h  filter.h
firmware/Firmware/include/Hardware/: dma.h  gpio.h  interupt_prioryty.h  timer.h  timerInit.h
firmware/Firmware/include/Sensors/: adcInit.h  adcPorts-batteryVoltage.h  bemf.h  digitalPorts.h  odometry.h
firmware/Firmware/include/Sensors/IMU/: MPU9250.h  MPU9250_Config.h  imu.h  imu_internal.h  mpu9250_config.h  mpu9250_dmp.h
firmware/Firmware/include/Storage/: flash_cal.h
firmware/Firmware/include/Utillity/: math.h  utillity.h
firmware/Firmware/src/: main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c  syscalls.c  sysmem.c  system_stm32f4xx.c
firmware/Firmware/src/Actors/: motor.c  pid.c  servo.c
firmware/Firmware/src/Communication/: communication_with_pi.c  spi.c  usart.c
firmware/Firmware/src/Data_structures/: PID.c  filter.c
firmware/Firmware/src/Hardware/: dma.c  gpio.c  timer.c  timerInit.c
firmware/Firmware/src/Sensors/: adcInit.c  adcPorts-batteryVoltage.c  bemf.c  digitalPorts.c  odometry.c
firmware/Firmware/src/Sensors/IMU/: MPU9250.c  MPU9250_RegisterMap.h  imu.c  imu_calibration.c  imu_data.c  imu_setup.c  mpu9250_dmp.c  mpu9250_hal.c
firmware/Firmware/src/Storage/: flash_cal.c
firmware/Firmware/src/Utility/: utillity.c
firmware/flashFiles/: flash_wombat.sh  (+2 more)
firmware/libs/CMSIS/: CMakeLists.txt
firmware/libs/CMSIS/Device/ST/STM32F4xx/Include/: stm32f427xx.h  stm32f4xx.h  system_stm32f4xx.h
firmware/libs/CMSIS/Include/: cachel1_armv7.h  cmsis_armcc.h  cmsis_armclang.h  cmsis_armclang_ltm.h  cmsis_compiler.h  cmsis_gcc.h  cmsis_iccarm.h  cmsis_version.h  core_armv81mml.h  core_armv8mbl.h  core_armv8mml.h  core_cm0.h  core_cm0plus.h  core_cm1.h  core_cm23.h  core_cm3.h  core_cm33.h  core_cm35p.h  core_cm4.h  core_cm55.h  core_cm7.h  core_cm85.h  core_sc000.h  core_sc300.h  core_starmc1.h  mpu_armv7.h  mpu_armv8.h  pac_armv81.h  pmu_armv8.h  tz_context.h
firmware/libs/STM32F4xx_HAL_Driver/: CMakeLists.txt  pure_virtual.c
firmware/libs/STM32F4xx_HAL_Driver/Inc/: stm32f4xx.h  stm32f4xx_hal.h  stm32f4xx_hal_adc.h  stm32f4xx_hal_adc_ex.h  stm32f4xx_hal_cortex.h  stm32f4xx_hal_def.h  stm32f4xx_hal_dma.h  stm32f4xx_hal_dma_ex.h  stm32f4xx_hal_exti.h  stm32f4xx_hal_flash.h  stm32f4xx_hal_flash_ex.h  stm32f4xx_hal_flash_ramfunc.h  stm32f4xx_hal_gpio.h  stm32f4xx_hal_gpio_ex.h  stm32f4xx_hal_pwr.h  stm32f4xx_hal_pwr_ex.h  stm32f4xx_hal_rcc.h  stm32f4xx_hal_rcc_ex.h  stm32f4xx_hal_spi.h  stm32f4xx_hal_tim.h  stm32f4xx_hal_tim_ex.h  stm32f4xx_hal_uart.h  stm32f4xx_ll_adc.h  stm32f4xx_ll_bus.h  stm32f4xx_ll_cortex.h  stm32f4xx_ll_dma.h  stm32f4xx_ll_exti.h  stm32f4xx_ll_gpio.h  stm32f4xx_ll_pwr.h  stm32f4xx_ll_rcc.h  stm32f4xx_ll_spi.h  stm32f4xx_ll_system.h  stm32f4xx_ll_tim.h  stm32f4xx_ll_usart.h  stm32f4xx_ll_utils.h
firmware/libs/STM32F4xx_HAL_Driver/Inc/Legacy/: stm32_hal_legacy.h
firmware/libs/STM32F4xx_HAL_Driver/src/: stm32f4xx_hal.c  stm32f4xx_hal_adc.c  stm32f4xx_hal_adc_ex.c  stm32f4xx_hal_cortex.c  stm32f4xx_hal_dma.c  stm32f4xx_hal_dma_ex.c  stm32f4xx_hal_exti.c  stm32f4xx_hal_flash.c  stm32f4xx_hal_flash_ex.c  stm32f4xx_hal_flash_ramfunc.c  stm32f4xx_hal_gpio.c  stm32f4xx_hal_pwr.c  stm32f4xx_hal_pwr_ex.c  stm32f4xx_hal_rcc.c  stm32f4xx_hal_rcc_ex.c  stm32f4xx_hal_spi.c  stm32f4xx_hal_tim.c  stm32f4xx_hal_tim_ex.c  stm32f4xx_hal_uart.c  stm32f4xx_ll_adc.c
firmware/libs/eMD/: CMakeLists.txt  module.lb
firmware/libs/eMD/driver/: module.lb
firmware/libs/eMD/driver/eMPL/: dmpKey.h  dmpmap.h  inv_mpu.c  inv_mpu.h  inv_mpu_dmp_motion_driver.c  inv_mpu_dmp_motion_driver.h
firmware/libs/eMD/driver/include/: log.h  mlinclude.h  mlmath.h
firmware/libs/eMD/driver/stm32L/: log_stm32.c  packet.h
firmware/libs/eMD/eMPL-hal/: eMPL_outputs.h  module.lb  mpu9250_hal.h
firmware/libs/eMD/mllite/: data_builder.h  hal_outputs.c  message_layer.c  message_layer.h  ml_math_func.c  ml_math_func.h  module.lb  mpl.c  mpl.h  results_holder.h  start_manager.c  start_manager.h  storage_manager.c  storage_manager.h
firmware/libs/eMD/mpl/: compass_vec_cal.h  fusion_9axis.h  heading_from_gyro.h  mag_disturb.h  module.lb  no_gyro_fusion.h  quaternion_supervisor.h
firmware/libs/eMD/pythonclient/: eMPL-client.py  euclid.py  ponycube.py
firmware/libs/motion_driver_6.12/: CMakeLists.txt  example_hal_implementation.c  motion_driver_hal.h
firmware/libs/motion_driver_6.12/src/driver/eMPL/: dmpmap.h  inv_mpu.c  inv_mpu.h  inv_mpu_dmp_motion_driver.c
firmware/libs/motion_driver_6.12/src/driver/include/: mlos.h  mltypes.h  mpu.h
firmware/libs/motion_driver_6.12/src/driver/stm32L/: log_stm32.c
firmware/libs/motion_driver_6.12/src/eMPL-hal/: eMPL_outputs.c
firmware/libs/motion_driver_6.12/src/mllite/: data_builder.c  hal_outputs.h  ml_math_func.h  results_holder.c  storage_manager.c
firmware/libs/motion_driver_6.12/src/mpl/: accel_auto_cal.h  fast_no_motion.h  gyro_tc.h
include/: pub_if_changed.hpp
localBuild/: CPackConfig.cmake  CPackSourceConfig.cmake  stm32_data_reader
pythonTest/: motor_pid_tuning.py  script.py  set_pid.py
scripts/: pid_tune.py
src/: Spi.cpp  main.cpp  version.h.in
systemd/: lcm-loopback-multicast.service  stm32_data_reader.service
tests/: CMakeLists.txt  DataPublisherTest.cpp  DeviceControllerTest.cpp  DeviceTypesTest.cpp  ResultTest.cpp  SpiMockTest.cpp
tests/mocks/: MockLogger.h  MockSpi.h
toolchain/: rpi-toolchain.cmake
(+85 files in other folders)
